update nord theme

--- a/syntaxhighlighter3/styles/shThemeNord.css
+++ b/syntaxhighlighter3/styles/shThemeNord.css
@@ -13,7 +13,7 @@
 
 /* Line numbers */
 .syntaxhighlighter .line .number {
-  color: #4c566a !important;
+  color: #d8dee9 !important;
 }
 
 /* Plain text */
@@ -116,6 +116,11 @@
 
 .syntaxhighlighter .gutter .line {
   border: none !important;
+  color: #d8dee9 !important;
+}
+
+.syntaxhighlighter table caption {
+  color: #d8dee9 !important;
 }
 
 /* Line highlight */
