set regex highlight

--- a/syntaxhighlighter3/styles/shThemeNord.css
+++ b/syntaxhighlighter3/styles/shThemeNord.css
@@ -45,6 +45,12 @@
   color: #a3be8c !important;
 }
 
+/* Regex */
+.syntaxhighlighter .regex,
+.syntaxhighlighter .regex a {
+  color: #a3be8c !important;
+}
+
 /* Keywords */
 .syntaxhighlighter .keyword {
   color: #81a1c1 !important;
