variables directives, etc

--- a/syntaxhighlighter3/styles/shThemeNord.css
+++ b/syntaxhighlighter3/styles/shThemeNord.css
@@ -64,7 +64,7 @@
 
 /* Variables */
 .syntaxhighlighter .variable {
-  color: #d8dee9 !important;
+  color: #b48ead !important;
 }
 
 /* Functions */
