--- a/syntaxhighlighter3/styles/shThemeNord.css
+++ b/syntaxhighlighter3/styles/shThemeNord.css
@@ -13,7 +13,7 @@
 
 /* Line numbers */
 .syntaxhighlighter .line .number {
-  color: #d8dee9 !important;
+  color: #4c566a !important;
 }
 
 /* Plain text */
@@ -35,7 +35,7 @@
 /* Comments */
 .syntaxhighlighter .comments,
 .syntaxhighlighter .comments a {
-  color: #616e88 !important;
+  color: #4c566a !important;
   font-style: italic !important;
 }
 
